# browser-use-node/src/v2/resources/browsers.ts
@@ -10,6 +10,7 @@ type UpdateBrowserSessionRequest = components["schemas"]["UpdateBrowserSessionRe
 type BrowserDownloadListResponse = components["schemas"]["BrowserDownloadListResponse"];
 
 export interface BrowserListParams {
+  metadata?: string[];
   pageSize?: number;
   pageNumber?: number;
   filterBy?: string;
